[package]
name = "recall"
version = "0.1.0"
authors = ["John Pothier <john.pothier7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
sqlite = "*"
toml = "*"
serde = "*"
serde_derive = "*"
shellexpand = "*"
chrono = "*"
colored = "2"